SERVER-58047: $toHashedIndexKey expression doesn't add any dependencies.

(cherry picked from commit 3f3f5cc03a6587f9d0cfc3bdcb3f8aa13fe2356c)